# genesis-mcp

./: .gitignore  CLAUDE.md  CLAUDE_CODE_HANDOVER.md  GENESIS_MCP_HANDOVER.md  HANDOVER_ADDENDUM.md  LICENSE  PRE_AUDIT_REPORT.md  README.md  SECURITY_AUDIT_REPORT.md  SECURITY_FIXES_v0_1.md  config.yaml  pyproject.toml
.claude/: settings.local.json
docs/history/: CLAUDE_CODE_HANDOVER.md  GENESIS_MCP_HANDOVER.md  HANDOVER_ADDENDUM.md
docs/security/: SECURITY_REVERIFY_v0_1.md
examples/: README.md  currency_demo.md  notes_demo.md  weather_demo.md
genesis/: config.py  generator.py  loader.py  meta_tools.py  registry.py  server.py  validator.py
genesis/templates/: tool_template.py
tests/: test_generator.py  test_registry.py  test_validator.py
tests/fixtures/: bad_imports.py  bad_syntax.py  valid_tool.py
